--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
+    "expo-file-system": "^19.0.21",
     "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
